app/globals.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@layer base {
  body {
    @apply font-primary bg-primary text-accent leading-relaxed antialiased;
    word-break: break-all;
    overflow-wrap: anywhere;
  }
  .h1 {
    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
  }
  .h2 {
    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
  }
  .h3 {
    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
  }
  .text-outline {
    -webkit-text-stroke: 1px #ffffff;
  }
  .text-outline-hover {
    -webkit-text-stroke: 1px #00ff99;
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

